--- a/index.html
+++ b/index.html
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Monstr</title>
-    <!-- <script src='js/index.js'></script> -->
-    <script src='js/demo.js'></script>
+    <script src="js/index.js"></script>
+    <!-- <script src="js/demo.js"></script> -->
   </head>
   <body>
+    <style>
+      .btn {
+        cursor: pointer;
+      }
+      /* .btn:hover {
+        color: rgb(246, 241, 241);
+        background-color: rgb(239, 150, 150);
+      } */
+    </style>
     <h1>Monstr Inc.</h1>
-    <div id='create-monster'></div>
-    <div id='monster-container'></div>
-    <button id="back"><=</button>
-    <button id="forward">=></button>
+    <div id="create-monster"></div>
+    <div id="monster-container"></div>
+    <button id="back" class="btn"><=</button>
+    <button id="forward" class="btn">=></button>
   </body>
 </html>
